[gd_scene load_steps=3 format=3 uid="uid://do5c1yd8gj6ts"]

[ext_resource type="PackedScene" uid="uid://j1l5nfbugmic" path="res://src/ui/item_menu/item_menu.tscn" id="1_wmrkn"]
[ext_resource type="Script" uid="uid://byouce3jbd7l7" path="res://src/world/levels/07_scorched_complex/menus/elevator/elevator_menu.gd" id="2_mrwp0"]

[node name="ElevatorMenu" instance=ExtResource("1_wmrkn")]
script = ExtResource("2_mrwp0")

[node name="VBoxContainer" type="VBoxContainer" parent="Holder" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Floor3Button" type="Button" parent="Holder/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 66
text = "3"

[node name="Floor2Button" type="Button" parent="Holder/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 66
text = "2"

[node name="Floor1Button" type="Button" parent="Holder/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 66
text = "1"
